--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,24 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>-Djavax.net.debug=all -Djavax.net.ssl.trustStore=trustStore -Dfile.encoding=UTF-8</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
 
         </plugins>
 
     </build>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url> <!-- the https you've been looking for -->
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled> <!-- or set to true if desired, default is false -->
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Logging with SLF4J & LogBack -->
@@ -145,4 +156,6 @@
     <profiles>
     </profiles>
 
+    <dependencyManagement>
+    </dependencyManagement>
 </project>
